--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "ipykernel>=6.30.1",
     "matplotlib>=3.10.6",
+    "ninja>=1.13.0",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "torch>=2.8.0",
